minor fix (flex-gap)

--- a/styles.css
+++ b/styles.css
@@ -621,7 +621,7 @@ main .middle {
 
   .food-list {
     margin: 0;
-    gap: 0.3rem;
+    gap: 0.5rem;
     /* justify-content: center; */
   }
 
